feature(upgrade): Bump for Sylius 0.18

--- a/Resources/views/Backend/Location/index.html.twig
+++ b/Resources/views/Backend/Location/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block topbar %}
     <ol class="breadcrumb">
-        <li>{{ 'sylius.breadcrumb.content'|trans }}</li>
+        <li>{{ 'sylius.ui.assortment'|trans }}</li>
         <li>{{ 'webburza.sylius.location.breadcrumb.index'|trans }}</a></li>
     </ol>
 {% endblock %}
