--- a/Resources/views/Backend/LocationType/update.html.twig
+++ b/Resources/views/Backend/LocationType/update.html.twig
@@ -4,9 +4,9 @@
 
 {% block topbar %}
     <ol class="breadcrumb">
-        <li>{{ 'sylius.breadcrumb.content'|trans }}</li>
+        <li>{{ 'sylius.ui.assortment'|trans }}</li>
         <li><a href="{{ path('webburza_location_location_type_index') }}">{{ 'webburza.sylius.location_type.breadcrumb.index'|trans }}</a></li>
-        <li>{{ 'sylius.breadcrumb.edit'|trans }}</li>
+        <li>{{ 'sylius.ui.edit'|trans }}</li>
     </ol>
 {% endblock %}
 
