--- a/Resources/views/Backend/Location/show.html.twig
+++ b/Resources/views/Backend/Location/show.html.twig
@@ -6,7 +6,7 @@
 
 {% block topbar %}
     <ol class="breadcrumb">
-        <li>{{ 'sylius.breadcrumb.content'|trans }}</li>
+        <li>{{ 'sylius.ui.assortment'|trans }}</li>
         <li><a href="{{ path('webburza_location_location_index') }}">{{ 'webburza.sylius.location.breadcrumb.index'|trans }}</a></li>
         <li>{{ location.name }}</li>
     </ol>
