--- a/Resources/views/Frontend/index.html.twig
+++ b/Resources/views/Frontend/index.html.twig
@@ -1,25 +1,28 @@
 {% extends 'SyliusWebBundle:Frontend:layout.html.twig' %}
 
-{% block title %}Locations{% endblock %}
+{% block title %}{{ 'webburza.sylius.location.frontend.all_locations' | trans }}{% endblock %}
+
+
 
 {% block main %}
-<hr>
-{% block slideshow_full %}{% endblock %}
-<div class="row">
-    <div class="col-md-12">
-        {% block content %}
-            {{ render(controller('WebburzaSyliusLocationBundle:Frontend/Location:search', {'request': app.request})) }}
-        {% endblock %}
-    </div>
-</div>
-<div class="row">
-    {% for i in 1..3 %}
-        <div class="col-md-4">
-            {{ sonata_block_render({'name': '/cms/blocks/block-' ~ i}) }}
+    <hr>
+    {% block slideshow_full %}{% endblock %}
+    <div class="row">
+        <div class="col-md-12">
+            {% block content %}
+                {{ render(controller('WebburzaSyliusLocationBundle:Frontend/Location:search', {'request': app.request})) }}
+            {% endblock %}
         </div>
-    {% endfor %}
-</div>
-<hr>
+    </div>
+    <hr>
+    <div class="row">
+        {% for i in 1..3 %}
+            <div class="col-md-4">
+                {{ sonata_block_render({'name': '/cms/blocks/block-' ~ i}) }}
+            </div>
+        {% endfor %}
+    </div>
+    <hr>
 {% endblock %}
 
 {% block stylesheets %}
@@ -33,7 +36,9 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script src="//maps.googleapis.com/maps/api/js?key={{ googleMapsKey }}"></script>
+    {% if googleMapsEnabled %}
+        <script src="//maps.googleapis.com/maps/api/js?key={{ googleMapsKey }}"></script>
+    {% endif %}
 
     {% javascripts '@WebburzaSyliusLocationBundle/Resources/public/js/locations.js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
