upgraded to sylius dev master

--- a/Resources/views/Frontend/_search.html.twig
+++ b/Resources/views/Frontend/_search.html.twig
@@ -1,68 +1,115 @@
-<div class="Location Location--listing">
+{% extends '@SyliusShop/layout.html.twig' %}
+
+{% block title %}{{ 'webburza.sylius.location.frontend.all_locations' | trans }}{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@SyliusUi/_stylesheets.html.twig' with {'path': 'bundles/webburzasyliuslocation/css/locations.css'} %}
+{% endblock %}
+
+{% block content %}
+    <hr>
     <div class="row">
-
         <div class="col-md-12">
-            <div class="page-header">
-                <h1>{{ 'webburza.sylius.location.frontend.all_locations' | trans }}</h1>
-            </div>
+            <div class="Location Location--listing">
+                <div class="row">
 
-            <div class="well">
-                <form class="Location-search" action="{{ path('webburza_location_frontend_search') }}" method="GET">
-                    <div class="col-md-12 form-group">
-                        <label class="required" for="location-input">{{ 'webburza.sylius.location.frontend.city_place_street' | trans }}</label>
-
-                        <input class="Location-input form-control" type="text" name="query" id="location-input" tabindex="1" />
-                    </div>
-                </form>
-            </div>
-
-            <div class="row">
-
-                <div class="LocationList clearfix">
-                {% if locations %}
-                    {% for location in locations %}
-                        {% if location.published %}
-                        <div class="LocationList-item col-md-4 col-sm-4 col-xs-6" data-location-id="{{ location.id }}" data-location-lat="{{ location.latitude }}" data-location-lng="{{ location.longitude }}">
-                            <p>{{ location.locationType.name }}</p>
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h3 class="panel-title">{{ location.name }}</h3>
-                                    </div>
-                                    <div class="panel-body">
-                                        <p class="LocationList-title">{{ location.address }}</p>
-
-                                        {% if location.phone %}
-                                            <p>{{ 'webburza.sylius.location.label.phone' | trans }}: <a href="tel:{{ location.phone|replace({'-' : '', ' ' : '', '/' : ''})|replace('+', '00') }}">{{ location.phone }}</a></p>
-                                        {% endif %}
-
-                                        <div class="LocationList-workingHoursContainer clearfix">
-                                            {% if location.workingHours %}
-                                                <p class="LocationList-workingHours LocationList-workingHours-title">{{ 'webburza.sylius.location.label.working_hours' | trans }}: {{ location.workingHours|nl2br }}</p>
-                                            {% endif %}
-
-                                            <a href="{{ path('webburza_location_frontend_show', {slug: location.slug}) }}" class="LocationList-link btn btn-success btn-sm">{{ 'webburza.sylius.location.frontend.details' | trans }}</a>
-                                        </div>
-
-                                    </div>
-                                </div>
+                    <div class="col-md-12">
+                        <div class="page-header">
+                            <h1>{{ 'webburza.sylius.location.frontend.all_locations' | trans }}</h1>
                         </div>
-                        {% endif %}
-                    {% endfor %}
-                {% else %}
-                    <div class="col-md-12"><p class="alert alert-danger">No locations found.</p></div>
-                {% endif %}
+
+                        <div class="well">
+                            <form class="Location-search" action="{{ path('webburza_location_frontend_search') }}"
+                                  method="GET">
+                                <div class="col-md-12 form-group">
+                                    <label class="required"
+                                           for="location-input">{{ 'webburza.sylius.location.frontend.city_place_street' | trans }}</label>
+
+                                    <input class="Location-input form-control" type="text" name="query"
+                                           id="location-input"
+                                           tabindex="1"/>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="row">
+                            <div class="LocationList clearfix">
+                                {% if locations %}
+                                    {% for location in locations %}
+                                        {% if location.published %}
+                                            <div class="LocationList-item col-md-4 col-sm-4 col-xs-6"
+                                                 data-location-id="{{ location.id }}"
+                                                 data-location-lat="{{ location.latitude }}"
+                                                 data-location-lng="{{ location.longitude }}">
+                                                <p>{{ location.locationType.name }}</p>
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <h3 class="panel-title">{{ location.name }}</h3>
+                                                    </div>
+                                                    <div class="panel-body">
+                                                        <p class="LocationList-title">{{ location.address }}</p>
+
+                                                        {% if location.phone %}
+                                                            <p>{{ 'webburza.sylius.location.label.phone' | trans }}: <a
+                                                                        href="tel:{{ location.phone|replace({'-' : '', ' ' : '', '/' : ''})|replace('+', '00') }}">{{ location.phone }}</a>
+                                                            </p>
+                                                        {% endif %}
+
+                                                        <div class="LocationList-workingHoursContainer clearfix">
+                                                            {% if location.workingHours %}
+                                                                <p class="LocationList-workingHours LocationList-workingHours-title">{{ 'webburza.sylius.location.label.working_hours' | trans }}
+                                                                    : {{ location.workingHours|nl2br }}</p>
+                                                            {% endif %}
+
+                                                            <a href="{{ path('webburza_location_frontend_show', {slug: location.slug}) }}"
+                                                               class="LocationList-link btn btn-success btn-sm">{{ 'webburza.sylius.location.frontend.details' | trans }}</a>
+                                                            <p><a class="btn btn-success btn-sm"
+                                                                  href="{{ path('webburza_location_frontend_index') }}"><i
+                                                                            class="glyphicon glyphicon-chevron-left" role="presentation"
+                                                                            aria-hidden="true"></i> {{ 'webburza.sylius.location.back_to_all' | trans }}
+                                                                </a></p>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% else %}
+                                    <div class="col-md-12"><p class="alert alert-danger">No locations found.</p></div>
+                                    <p><a class="btn btn-success btn-sm"
+                                          href="{{ path('webburza_location_frontend_index') }}"><i
+                                                    class="glyphicon glyphicon-chevron-left" role="presentation"
+                                                    aria-hidden="true"></i> {{ 'webburza.sylius.location.back_to_all' | trans }}
+                                        </a></p>
+                                {% endif %}
+
+                            </div>
+                        </div>
+                    </div>
+                    {% if googleMapsEnabled and googleMapsKey %}
+                        <div class="col-md-12">
+                            <hr>
+                            <div class="Map Map--listing">
+                                <div id="Map-holder"></div>
+                            </div>
+                        </div>
+                    {% endif %}
 
                 </div>
             </div>
         </div>
-        {% if googleMapsEnabled and googleMapsKey %}
-        <div class="col-md-12">
-            <hr>
-            <div class="Map Map--listing">
-                <div id="Map-holder"></div>
-            </div>
-        </div>
-        {% endif %}
-
     </div>
-</div>
+    <hr>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    {% if googleMapsEnabled %}
+        <script src="//maps.googleapis.com/maps/api/js?key={{ googleMapsKey }}"></script>
+    {% endif %}
+    {% include '@SyliusUi/_javascripts.html.twig' with {'path': 'bundles/webburzasyliuslocation/js/location.js'} %}
+    {% include '@SyliusUi/_javascripts.html.twig' with {'path': 'bundles/webburzasyliuslocation/js/locations.js'} %}
+{% endblock %}
