--- a/Resources/views/Frontend/_search.html.twig
+++ b/Resources/views/Frontend/_search.html.twig
@@ -19,7 +19,7 @@
                             <h1>{{ 'webburza.sylius.location.frontend.all_locations' | trans }}</h1>
                         </div>
 
-                        <div class="well">
+                        <div>
                             <form class="Location-search" action="{{ path('webburza_location_frontend_search') }}"
                                   method="GET">
                                 <div class="col-md-12 form-group">
